--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "redux-wrapper": "^0.0.1",
     "sweetalert2": "^11.4.23",
     "swr": "^1.3.0"
   },
