--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
+    "react-icons": "^4.4.0",
     "sweetalert2": "^11.4.23",
     "swr": "^1.3.0"
   },
