--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "next": "12.2.2",
     "next-redux-wrapper": "^7.0.5",
