--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@reduxjs/toolkit": "^1.8.3",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
+    "intro.js": "^6.0.0",
+    "intro.js-react": "^0.6.0",
     "next": "12.2.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
